<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>manfred.bytedepth</groupId>
    <artifactId>bytedepth</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>bytedepth</name>

    <modules>
        <module>bytedepth-domain</module>
        <module>bytedepth-app</module>
        <module>bytedepth-infrastructure</module>
        <module>bytedepth-adapter</module>
        <module>bytedepth-start</module>
        <module>bytedepth-coverage</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring.boot.version>3.2.5</spring.boot.version>
        <cola.version>4.3.2</cola.version>
        <mybatis.plus.version>3.5.5</mybatis.plus.version>
        <sort.skip>true</sort.skip>
        <!-- 升级 Testcontainers：1.20.x 内置 docker-java 3.4+，兼容 Colima 29.x（API>=1.44） -->
        <testcontainers.version>1.20.1</testcontainers.version>
        <owasp.html.sanitizer.version>20260313.1</owasp.html.sanitizer.version>
        <!-- Bucket4j 8.18.0 is not published to Maven Central; 8.14.0 is the
             newest Java 17/Lettuce line available from the public repository. -->
        <bucket4j.version>8.14.0</bucket4j.version>
        <jacoco.version>0.8.15</jacoco.version>
        <coverage.data-file>${maven.multiModuleProjectDirectory}/bytedepth-coverage/target/jacoco-merged.exec</coverage.data-file>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Testcontainers BOM 放在 Spring Boot 之前，覆盖其中的旧版本
                 1.20.x 内置 docker-java 3.4+，兼容 Colima 29.x（Docker API >= 1.44）-->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.20.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cola</groupId>
                <artifactId>cola-component-dto</artifactId>
                <version>${cola.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cola</groupId>
                <artifactId>cola-component-exception</artifactId>
                <version>${cola.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis.plus.version}</version>
            </dependency>
            <dependency>
                <groupId>org.commonmark</groupId>
                <artifactId>commonmark</artifactId>
                <version>0.21.0</version>
            </dependency>
            <dependency>
                <groupId>org.commonmark</groupId>
                <artifactId>commonmark-ext-gfm-tables</artifactId>
                <version>0.21.0</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
                <artifactId>owasp-java-html-sanitizer</artifactId>
                <version>${owasp.html.sanitizer.version}</version>
            </dependency>
            <dependency>
                <groupId>manfred.bytedepth</groupId>
                <artifactId>bytedepth-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>manfred.bytedepth</groupId>
                <artifactId>bytedepth-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>manfred.bytedepth</groupId>
                <artifactId>bytedepth-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>manfred.bytedepth</groupId>
                <artifactId>bytedepth-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.30</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!--
            仅在显式指定 coverage.includes 时启用。JaCoCo 会对匹配的生产类要求
            行、分支和方法均零遗漏；避免历史未覆盖代码阻断与本次改动无关的提交。
        -->
        <profile>
            <id>changed-coverage</id>
            <activation>
                <property>
                    <name>coverage.includes</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.version}</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>check-changed-classes</id>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                                <configuration>
                                    <dataFile>${coverage.data-file}</dataFile>
                                    <includes>
                                        <include>${coverage.includes}</include>
                                    </includes>
                                    <rules>
                                        <rule>
                                            <element>CLASS</element>
                                            <limits>
                                                <limit>
                                                    <counter>LINE</counter>
                                                    <value>MISSEDCOUNT</value>
                                                    <maximum>0</maximum>
                                                </limit>
                                                <limit>
                                                    <counter>BRANCH</counter>
                                                    <value>MISSEDCOUNT</value>
                                                    <maximum>0</maximum>
                                                </limit>
                                                <limit>
                                                    <counter>METHOD</counter>
                                                    <value>MISSEDCOUNT</value>
                                                    <maximum>0</maximum>
                                                </limit>
                                            </limits>
                                        </rule>
                                    </rules>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
